[helm] Use when switching buffers
... and do not redefine recipe for helm package :-(

--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -342,7 +342,7 @@ Another valid use case for visible line numbers is when presenting your content 
 * Buffer management
 Use Helm to switch between buffers:
 #+BEGIN_SRC emacs-lisp
-  (el-get-bundle helm
+  (with-eval-after-load-feature helm-buffers
     (global-set-key (kbd "C-x b") 'helm-buffers-list))
 #+END_SRC
 ** Close buffer with =Ctrl-F4=
