--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1129,7 +1129,7 @@ All files in a default location to look for Org files will be used for agenda di
 #+END_SRC
 *** Debian package
 To add link to Debian package, use =deb:= link type followed by package's name, i.e. =deb:python3-minimal=. Opening such link will show package's details with =apt-utils-show-package= (from =apt-utils= feature provided by [[deb:debian-el]] package).
-#+BEGIN_SRC emacs-lisp :tangle no
+#+BEGIN_SRC emacs-lisp
   (el-get-bundle apt-get:debian-el)
 #+END_SRC
 
