--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -133,52 +133,46 @@ Error (el-get): while installing projectile: el-get: *apt-get install elpa-proje
    (s dash))
   ("el-get dpkg status" . t)
   ("el-get status file"
-   (status "required" recipe nil))
+   (status "installed" recipe
+	   (:name ag :type apt-get :pkgname "silversearcher-ag-el" :after nil :depends
+		  (s dash))))
   ("raw dpkg status" . "install ok installed"))
  (("el-get-package-def" :name projectile :type apt-get :pkgname "elpa-projectile" :after nil :depends
    (pkg-info dash))
   ("el-get dpkg status" . t)
   ("el-get status file"
-   (status "required" recipe nil))
+   (status "installed" recipe
+	   (:name projectile :type apt-get :pkgname "elpa-projectile" :after nil :depends
+		  (pkg-info dash))))
   ("raw dpkg status" . "install ok installed"))
  (("el-get-package-def" :name seq :type apt-get :pkgname "elpa-seq" :after nil)
   ("el-get dpkg status" . t)
   ("el-get status file"
-   (status "required" recipe nil))
+   (status "installed" recipe
+	   (:name seq :description "Sequence manipulation library for Emacs" :builtin "25" :type apt-get :pkgname "elpa-seq")))
   ("raw dpkg status" . "install ok installed"))
- (("el-get-package-def" :name prolog-el :type apt-get :pkgname "prolog-el" :after nil)
+ (("el-get-package-def" :name prolog-el :type apt-get :after nil)
   ("el-get dpkg status" . t)
   ("el-get status file"
-   (status "required" recipe nil))
+   (status "installed" recipe
+	   (:name prolog-el :type apt-get :pkgname "prolog-el" :after nil)))
   ("raw dpkg status" . "install ok installed"))
  (("el-get-package-def" :name helm :type apt-get :pkgname "elpa-helm" :after nil :features
    ("helm-config"))
   ("el-get dpkg status" . t)
   ("el-get status file"
    (status "installed" recipe
-	   (:name helm :after nil :features
-		  ("helm-config")
-		  :description "Emacs incremental completion and narrowing framework" :type github :pkgname "emacs-helm/helm" :autoloads "helm-autoloads" :build
-		  (("make"))
-		  :build/darwin
-		  `(("make" ,(format "EMACS_COMMAND=%s" el-get-emacs)))
-		  :build/windows-nt
-		  (let
-		      ((generated-autoload-file
-			(expand-file-name "helm-autoloads.el"))
-		       \
-		       (backup-inhibited t))
-		  (update-directory-autoloads default-directory)
-		  nil)
-	   :post-init
-	   (helm-mode))))
- ("raw dpkg status" . "install ok installed"))
-(("el-get-package-def" :name helm-projectile :type apt-get :pkgname "elpa-helm-projectile" :after nil :depends
-(cl-lib dash helm projectile))
-("el-get dpkg status" . t)
-("el-get status file"
-(status "required" recipe nil))
-("raw dpkg status" . "install ok installed")))
+	   (:name helm :type apt-get :pkgname "elpa-helm" :after nil :features
+		  ("helm-config"))))
+  ("raw dpkg status" . "install ok installed"))
+ (("el-get-package-def" :name helm-projectile :type apt-get :pkgname "elpa-helm-projectile" :after nil :depends
+   (cl-lib dash helm projectile))
+  ("el-get dpkg status" . t)
+  ("el-get status file"
+   (status "installed" recipe
+	   (:name helm-projectile :type apt-get :pkgname "elpa-helm-projectile" :after nil :depends
+		  (cl-lib dash helm projectile))))
+  ("raw dpkg status" . "install ok installed")))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp :tangle no :results org code :var packages='("elpa-projectile" "silversearcher-ag-el")'
