--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -855,8 +855,7 @@ Use window-system dependent default frame parameters:
 * Docker
 ** Manage Docker images and containers
 #+BEGIN_SRC emacs-lisp
-  (el-get-bundle docker
-    :depends (json-mode tablist docker-tramp dash s magit))
+  (el-get-bundle docker)
 #+END_SRC
 
 *** TODO Missing dependencies
