--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1039,15 +1039,16 @@ Tools like the puppet module tool and librarian-puppet use the Forge API to quer
 #+END_SRC
 ** TODO Projectile
 #+BEGIN_SRC emacs-lisp
-  (el-get-bundle projectile :type apt-get :pkgname "elpa-projectile")
-  (el-get-bundle helm-projectile :type apt-get :pkgname "elpa-helm-projectile")
-#+END_SRC
-#+BEGIN_SRC emacs-lisp
-  (setq projectile-mode-line
-        '(:eval
-          (if (file-remote-p default-directory)
-              " Projectile"
-            (format " P[%s]" (projectile-project-name)))))
+  (el-get-bundle projectile :type apt-get :pkgname "elpa-projectile"
+    (setq projectile-mode-line
+          '(:eval
+            (if (file-remote-p default-directory)
+                " Projectile"
+              (format " P[%s]" (projectile-project-name)))))
+    (projectile-global-mode 1))
+  (el-get-bundle helm-projectile :type apt-get :pkgname "elpa-helm-projectile"
+    (helm-projectile-on)
+    (setq projectile-completion-system 'helm))
 #+END_SRC
 
 * Org
