--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1524,6 +1524,16 @@ Automatically open =.class= files with =javap=:
   (el-get-bundle gradle-mode)
   (el-get-bundle gradle-el :type github :pkgname "vhallac/gradle-el")
 #+END_SRC
+** Language Server Protocol
+*** [[github:emacs-lsp/lsp-mode][GitHub - emacs-lsp/lsp-mode: Emacs client for the Language Server Protocol]]
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle lsp-mode :type github :pkgname "emacs-lsp/lsp-mode")
+  #+END_SRC
+*** [[github:emacs-lsp/lsp-java][GitHub - emacs-lsp/lsp-java]]
+  #+BEGIN_SRC emacs-lisp
+  (el-get-bundle lsp-java :type github :pkgname "emacs-lsp/lsp-java"
+    :depends (lsp-mode))
+#+END_SRC
 * Android
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle android-mode)
