--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -995,16 +995,24 @@ Tools like the puppet module tool and librarian-puppet use the Forge API to quer
 #+END_SRC
 ** TODO Projectile
 #+BEGIN_SRC emacs-lisp
-  (el-get-bundle projectile :type apt-get :pkgname "elpa-projectile"
+  (el-get-bundle projectile :type apt-get :pkgname "elpa-projectile")
+  (use-package projectile
+    :config
     (setq projectile-mode-line
           '(:eval
             (if (file-remote-p default-directory)
                 " Projectile"
               (format " P[%s]" (projectile-project-name)))))
     (projectile-global-mode 1))
-  (el-get-bundle helm-projectile :type apt-get :pkgname "elpa-helm-projectile"
-    (helm-projectile-on)
-    (setq projectile-completion-system 'helm))
+
+  (el-get-bundle helm-projectile :type apt-get :pkgname "elpa-helm-projectile")
+  (use-package helm-projectile
+    :config
+    (setq projectile-completion-system 'helm)
+    (helm-projectile-on))
+
+  (el-get-bundle helm-ag)
+  (use-package helm-ag)
 #+END_SRC
 
 * Org
