--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -283,6 +283,13 @@ There are two forks of original [[emacswiki:powerline.el]] (references [[github:
 
   (el-get-bundle helm-swoop)
 #+END_SRC
+** Faces
+#+BEGIN_SRC emacs-lisp
+  (use-package helm
+    :config
+    (custom-set-faces
+     '(helm-source-header ((t (:weight bold :height 1.1))))))
+#+END_SRC
 * Changing the Location of Point
 ** ...to an absolute line number
 Showing line numbers all the time is just noise but there is a case when they might be handy - when I have an error or log message and have to jump right to this line. To make this happen, show an absolute line number on the left fringe using =linum-mode= and on activating point-moving command only:
